WIP — first attempt at styling and correctly spacing the Day components

--- a/src/components/SelectedLocation.css
+++ b/src/components/SelectedLocation.css
@@ -10,3 +10,8 @@
   font-size: 4rem;
   margin: 0;
 }
+
+.pad * {
+  margin-left: 7px;
+  margin-right: 7px;
+}
