--- a/src/components/Today.css
+++ b/src/components/Today.css
@@ -15,6 +15,10 @@
   flex: 2;
 }
 
+#today {
+  text-align: left;
+}
+
 .high-low {
   display: flex;
   justify-content: space-between;
